# structured-parallel-programming

./: .gitignore  README.md
cpp/mandelbrot_cpp/: CMakeLists.txt  TestMandelbrot.cpp  TestMandelbrot.h  main.cpp
cpp/safety_1/: CMakeLists.txt  main.cpp
cpp/tbb_1/: CMakeLists.txt  main.cpp
rust/join_1/: Cargo.toml
rust/join_1/src/: main.rs
rust/mandelbrot_1/: Cargo.toml
rust/mandelbrot_1/benches/: benchmark.rs
rust/mandelbrot_1/src/: lib.rs  main.rs
rust/ownership_1/: Cargo.toml
rust/ownership_1/src/: main.rs
rust/rayon_1/: Cargo.toml
rust/rayon_1/src/: main.rs
rust/rayon_2/: Cargo.toml
rust/rayon_2/src/: main.rs
rust/rayon_map_reduce_1/: Cargo.toml
rust/rayon_map_reduce_1/src/: main.rs
rust/safety_1/: Cargo.toml
rust/safety_1/src/: main.rs
rust/safety_rust_1/src/: main.rs
rust/scope_1/: Cargo.toml
rust/scope_1/src/: main.rs
rust/threads_rust_1/: Cargo.toml
rust/threads_rust_1/src/: main.rs
rust/threads_rust_2/: Cargo.toml
rust/threads_rust_2/src/: main.rs
rust/type_inference/: Cargo.toml
slides/: tdd.md
